More refactoring for the blocks

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,11 @@
       }
     ],
     "paths": {
-      "@/*": ["./*"]
+      "@/*": ["./*"],
+      "@/components/*": ["./components/*"],
+      "@/sanity/*": ["./sanity/*"],
+      "@/styles/*": ["./styles/*"],
+      "@/utils/*": ["./utils/*"]
     },
     "target": "ES2017"
   },
