--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.10.0",
+    "@mui/icons-material": "^6.4.4",
+    "@mui/material": "^6.4.4",
     "@next/third-parties": "^15.1.6",
     "@portabletext/react": "^3.2.0",
     "@radix-ui/react-accordion": "^1.2.2",
@@ -31,6 +35,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.473.0",
+    "mapbox-gl": "^3.10.0",
     "motion": "^12.3.0",
     "next": "15.1.5",
     "next-sanity": "^9.8.51",
@@ -42,6 +47,7 @@
     "resend": "^4.1.2",
     "sanity": "^3.74.0",
     "sanity-image": "^1.0.0",
+    "sanity-plugin-media": "^2.3.2",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
