--- a/components.json
+++ b/components.json
@@ -12,8 +12,8 @@
   },
   "aliases": {
     "components": "@/components",
-    "utils": "@/lib/utils",
-    "ui": "@/components/ui",
+    "utils": "@/features/unorganized-utils/utils",
+    "ui": "@/features/unorganized-components/ui",
     "lib": "@/lib",
     "hooks": "@/hooks",
     "features": "@/features"
