--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "@portabletext/react": "^3.2.1",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@sanity/code-input": "^5.1.2",
     "@sanity/image-url": "^1.1.0",
@@ -30,6 +33,7 @@
     "@sanity/preview-url-secret": "^2.1.4",
     "@sanity/ui": "^2.12.3",
     "@sanity/vision": "^3.75.0",
+    "@turf/turf": "^7.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
