--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.10.0",
+    "@iconify/react": "^5.2.0",
     "@mui/icons-material": "latest",
     "@mui/material": "^6.4.6",
     "@next/third-parties": "^15.1.6",
