--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@sanity/ui": "^2.12.3",
     "@sanity/vision": "^3.75.0",
     "@turf/turf": "^7.2.0",
+    "@types/animejs": "^3.1.13",
+    "animejs": "^3.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
