--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "animejs": "^3.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "convex": "^1.23.0",
     "embla-carousel-react": "^8.5.2",
     "lucide-react": "^0.469.0",
     "mapbox-gl": "^3.10.0",
