--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@sanity/vision": "^3.75.0",
     "@turf/turf": "^7.2.0",
     "@types/animejs": "^3.1.13",
+    "@u-wave/react-vimeo": "^0.9.12",
     "animejs": "^3.2.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
